--- a/src/style.css
+++ b/src/style.css
@@ -216,9 +216,9 @@ footer {
     }
     p {
         font-family: 'Inter';
-        font-size: 24px;
+        font-size: 34px;
         padding: 16px 0;
-        line-height: 56px;
+        line-height: 150%;
         width: 100%;
     }
     img {
@@ -272,7 +272,7 @@ footer {
     
     h3 {
         font-family: 'Inter';
-        font-size: 32px;
+        font-size: 40px;
         font-weight: 400;
     }
     button {
@@ -302,7 +302,7 @@ footer {
     .see-more {
         padding: 40px 0 80px 0;
         font-family: 'Inter';
-        font-size: 18px;
+        font-size: 34px;
         font-weight: 700;
         color: #C9C9C9;
     }
